<resources>
    <string name="app_name">Recit</string>
    <string name="app_desc">Image Recognition</string>
    <string name="recit_desc">Recit will help you recognize and classify images.</string>
    <string name="contentDesc">Image</string>
    <string name="withCamera">Use Camera</string>
    <string name="withImage">Use Image</string>
    <string name="imageSeems">Well, seems like its a</string>
    <string name="chooseImg">Choose Image</string>
    <string name="selectImg">Select an image</string>
    <string name="result">Result will appear here</string>
</resources>
