<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:theme="?attr/actionBarTheme">
        <ImageView
                android:src="@drawable/logo"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:maxHeight="25dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/contentDesc"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">
        <TextView
                android:text="@string/recit_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:drawableStart="@drawable/ic_info_black_24dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:layout_weight="2"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp" android:src="@drawable/ic_camera_alt_black_24dp"
                    android:contentDescription="@string/contentDesc"/>
            <TextView
                    android:text="@string/withCamera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp" android:src="@drawable/ic_image_black_24dp"
                    android:contentDescription="@string/contentDesc"/>
            <TextView
                    android:text="@string/withImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/purple"
                    android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>